# custack-robo

./: .gitignore  .gitmodules  README.md
.github/scripts/: ai_review.py
.github/workflows/: ai-review.yaml
controller_bridge/: README.md  requirements.txt  setup.py
controller_bridge/controller_bridge/: __init__.py  controller_bridge.py
controller_bridge/controller_bridge/zeromq/: __init__.py  messages.py  subscriber.py
custack-controller-host/: README.md  platformio.ini
custack-controller-host/src/: main.cpp
custack-controller-robot/: platformio.ini
custack-controller-robot/src/: main.cpp
custack-hardware/electric/: ..gitignore  .gitignore
custack-robo-unity/: .gitignore  README.md
custack-robo-unity/Assets/: InputSystem_Actions.inputactions  Ros2ForUnity  WeaponDatabase.asset  packages.config
custack-robo-unity/Assets/Effects/: effect_flash_002.prefab  effect_laser_001.prefab
custack-robo-unity/Assets/Icons/: power.xcf  setting.xcf
custack-robo-unity/ProjectSettings/: DynamicsManager.asset  EditorBuildSettings.asset  ProjectSettings.asset  TagManager.asset
custack-unity/Assets/: msgbrowser_settings.asset
custack-unity/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  TagManager.asset
custack_ws/: camera_calib.yaml  camera_config.yaml  custack_ws.code-workspace  homography.yaml
custack_ws/src/custack_locator_cpp/: CMakeLists.txt  package.xml
custack_ws/src/custack_locator_cpp/src/: locator.cpp  locator_node.cpp  locator_node.hpp
markerpos_pub/: package_update.sh  start_publisher.sh
markerpos_pub/markerpos_pub/: CMakeLists.txt  package.xml
markerpos_server/: .gitignore  README.md  requirements.txt  setup.py  start_to_jetson.sh  stop_to_jetson.sh  sync_to_jetson.sh
markerpos_server/markerpos_server/: CMakeLists.txt  __init__.py  homography_calc.py  markerpos_server.py  package.xml  test_publish.py
projector-calibration/: .gitignore  README.md  calib_config.json  calibration.py  cp_config.json  main.py  pc_config.json  proj_calib_config.json  requirements.txt
projector-calibration/appcontroller/: appcontroller.py  range_slider.py
projector-calibration/circleproj/: circleproj.py  shm.py
projector-calibration/projectcalib/: image_proc.py  projectcalib.py  shm.py
tests/: calib_config.json  gopro_webcam.py  marker_detect.py  zeromq_req.py  zeromq_stream.py
tools/: calib_config.json  camera_config.json  gopro_webcam.py  marker_detect.py  requirements.txt  webcam_ctrl.py
(+173 files in other folders)
